--- a/index.html
+++ b/index.html
@@ -68,8 +68,7 @@
 									<br>
 									<br>
 									<a>
-										Currently seeking employment within the ICT Industry.
-										Previous employment & skills in IT helpdesk/support & customer service roles.
+										Currently employed @ R-Group International.
 									</a>
 								</div>
 							</div>
