--- a/index.html
+++ b/index.html
@@ -104,7 +104,8 @@
 								<div>
 									<a href="#">
 										<h2>YOUTUBE VIDEOS</h2>
-										<p>This is where I would briefly describe my YouTube channel and it's achievements. Whilst also having a link to it.</p>
+										<p>YouTube was a personal project for me during high school education, where I produced music mixes of music that I was listening to at the time. I've you're looking for new original produced music from me, I upload at SoundCloud now</p>
+										<p>While regular uploads have stopped, I do occasionally upload unlisted videos to share with friends or specific groups of people.</p>
 									</a>
 								</div>
 							</li>
@@ -112,7 +113,8 @@
 								<div>
 									<a href="#">
 										<h2>MUSIC</h2>
-										<p>This is where I would talk about music being a side hobby and put a link to a few things or something idk.</p>
+										<p>Music is a personal side hobby for me, I usually make music for myself and sharing with friends.</p>
+										<iframe width="100%" height="300" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/435923586&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe>
 									</a>
 								</div>
 							</li>
@@ -120,7 +122,13 @@
 								<div>
 									<a href="#">
 										<h2>TRAVEL</h2>
-										<p>This is where I would talk about my travel experiences.</p>
+										<p>I've Travelled most of South East Asia.</p>
+										<p>
+											<li>Thailand</li>
+											<li>Indonesia</li>
+											<li>Malaysia</li>
+											<li>Singapore</li>
+										</p>
 									</a>
 								</div>
 							</li>
@@ -133,10 +141,6 @@
 											<br>
 											<br>
 											Personal IT related interests include UI/UX Web Design & Development, Programming / Reverse Engineering & Networking.
-											<br>
-											<br>
-											Currently seeking employement within the ICT Industry.
-											Previous employment & skills in IT help desk & customer service roles.
 										</p>
 									</a>
 								</div>
