--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
 			<!-- TITLE -->
 				<div id="title">
-					<h1 href="/">HUNTER</h1>
+					<h1>HUNTER</h1>
 				</div>
 
 			<!-- DESCRIPTION -->
