--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
 								<div>
 									<a href="#">
 										<h2>YOUTUBE VIDEOS</h2>
-										<p>YouTube was a personal project for me during high school education, where I produced music mixes of music that I was listening to at the time. I've you're looking for new original produced music from me, I upload at SoundCloud now</p>
+										<p>YouTube was a personal project for me during 2010-2012, where I produced mixes of music that I was listening to at the time. If you're looking for new music from me, I release on SoundCloud now</p>
 										<p>While regular uploads have stopped, I do occasionally upload unlisted videos to share with friends or specific groups of people.</p>
 									</a>
 								</div>
