--- a/index.html
+++ b/index.html
@@ -114,6 +114,7 @@
 									<a href="#">
 										<h2>MUSIC</h2>
 										<p>Music is a personal side hobby for me, I usually make music for myself and sharing with friends.</p>
+
 										<iframe width="50%" height="150" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/435923586&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe>
 										<iframe width="50%" height="150" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/514514406%3Fsecret_token%3Ds-OJWyH&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe>
 									</a>
@@ -125,12 +126,10 @@
 										<h2>TRAVEL</h2>
 										<p>I've Travelled most of South East Asia.</p>
 										<p>
-											<ul>
-												<li>Thailand</li>
-												<li>Indonesia</li>
-												<li>Malaysia</li>
-												<li>Singapore</li>
-											</ul>
+											<a>Thailand</a>
+											<a>Indonesia</a>
+											<a>Malaysia</a>
+											<a>Singapore</a>
 										</p>
 									</a>
 								</div>
