--- a/index.html
+++ b/index.html
@@ -124,12 +124,19 @@
 								<div>
 									<a href="#">
 										<h2>TRAVEL</h2>
-										<p>I've Travelled most of South East Asia.</p>
+										<p>I've travelled parts of South East Asia.</p>
 										<p>
 											<a>Thailand</a>
 											<a>Indonesia</a>
 											<a>Malaysia</a>
 											<a>Singapore</a>
+										</p>
+										<p>Looking to do the following in the next 10.</p>
+										<p>
+											<a>Japan</a>
+											<a>South Korea</a>
+											<a>Main Land China</a>
+											<a>CambodiaC</a>
 										</p>
 									</a>
 								</div>
