--- a/index.html
+++ b/index.html
@@ -124,19 +124,18 @@
 								<div>
 									<a href="#">
 										<h2>TRAVEL</h2>
-										<p>I've travelled parts of South East Asia.</p>
 										<p>
-											<a>Thailand</a>
-											<a>Indonesia</a>
-											<a>Malaysia</a>
-											<a>Singapore</a>
-										</p>
-										<p>Looking to do the following in the next 10.</p>
-										<p>
-											<a>Japan</a>
-											<a>South Korea</a>
-											<a>Main Land China</a>
-											<a>CambodiaC</a>
+											I've travelled the following parts of South East Asia.
+												• Thailand
+												• Indonesia
+												• Malaysia
+												• Singapore
+											
+											Looking to do the following in the next 10.
+												• Japan
+												• South Korea
+												• Main Land China
+												• Cambodia
 										</p>
 									</a>
 								</div>
