--- a/index.html
+++ b/index.html
@@ -63,12 +63,12 @@
 									<br>
 									<br>
 									<a>
-										Personal IT related interests include UI/UX Web Design & Development, Programming / Reverse Engineering & Networking.
+										Personal IT related interests include Web Dev, Simple Programming / Scripting, Reverse Engineering & Networking.
 									</a>
 									<br>
 									<br>
 									<a>
-										Currently employed @ R-Group International.
+										Currently exploring exciting new opportunities @ undisclosed employer.
 									</a>
 								</div>
 							</div>
@@ -104,7 +104,7 @@
 								<div>
 									<a href="#">
 										<h2>YOUTUBE VIDEOS</h2>
-										<p>YouTube was a personal project for me during 2010-2012, where I produced mixes of music that I was listening to at the time. If you're looking for new music from me, I release on SoundCloud now</p>
+										<p>YouTube was a side project for me during 2010-2012, where I produced mixes of music that I was listening to at the time. If you're looking for new music from me, I release on SoundCloud now</p>
 										<p>While regular uploads have stopped, I do occasionally upload unlisted videos to share with friends or specific groups of people.</p>
 									</a>
 								</div>
@@ -113,7 +113,7 @@
 								<div>
 									<a href="#">
 										<h2>MUSIC</h2>
-										<p>Music is a personal side hobby for me, I usually make music for myself and sharing with friends.</p>
+										<p>Music is a personal side hobby for me, I usually make music for myself and occasionally share it with friends.</p>
 
 										<iframe width="50%" height="150" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/435923586&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe>
 										<iframe width="50%" height="150" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/514514406%3Fsecret_token%3Ds-OJWyH&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe>
@@ -125,16 +125,16 @@
 									<a href="#">
 										<h2>TRAVEL</h2>
 										<p>
-											I've travelled the following parts of South East Asia.
+											I've travelled to the following parts of South East Asia.
 												• Thailand
 												• Indonesia
 												• Malaysia
 												• Singapore
 											
-											Looking to do the following in the next 10.
+											Looking to do the following in the next 10 or so.
 												• Japan
 												• South Korea
-												• Main Land China
+												• China
 												• Cambodia
 										</p>
 									</a>
