--- a/index.html
+++ b/index.html
@@ -21,14 +21,14 @@
 
 			<!-- PAGES -->
 				<div id="pages">
-					<a href="hhchunter.com/aboutme">About Me</a>
-					<a href="hhchunter.com/resume">Resume</a>
-					<a href="hhchunter.com/contact">Contact Me</a>
+					<a href="/aboutme">About Me</a>
+					<a href="/resume/cv.pdf">Resume</a>
+					<a href="/contact">Contact Me</a>
 					/
-					<a href="hhchunter.com/social">Social Media</a>
+					<a href="/social">Social Media</a>
 					/
-					<a href="hhchunter.com/video">Videos</a>
-					<a href="hhhchunter.com/music">Music</a>
+					<a href="/video">Videos</a>
+					<a href="/music">Music</a>
 				</div>
 
 			<!-- HEADER IMAGE -->
