--- a/index.html
+++ b/index.html
@@ -97,6 +97,7 @@
 										<p href="https://twitter.com/hhchunter">@hhchunter</p>
 										<p href='https://www.youtube.com/c/HHCHunterYTC'>YouTube</p>
 										<p href='https://www.soundcloud.com/hhc-hunter'>SoundCloud</p>
+										<p>Discord - HHCHunter #3960</p>
 									</a>
 								</div>
 							</li>
