--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
 								<div>
 									<a href="#">
 										<h2>YOUTUBE VIDEOS</h2>
-										<p>YouTube was a side project for me during 2010-2012, where I produced mixes of music that I was listening to at the time. If you're looking for new music from me, I release on SoundCloud now</p>
+										<p>YouTube was a side project for me during 2010-2012, where I produced mixes of music that I was listening to at the time. If you're looking for new music from me, I release on SoundCloud now.</p>
 										<p>While regular uploads have stopped, I do occasionally upload unlisted videos to share with friends or specific groups of people.</p>
 									</a>
 								</div>
@@ -114,10 +114,11 @@
 								<div>
 									<a href="#">
 										<h2>MUSIC</h2>
-										<p>Music is a personal side hobby for me, I usually make music for myself and occasionally share it with friends.</p>
-
-										<iframe width="50%" height="150" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/435923586&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe>
-										<iframe width="50%" height="150" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/514514406%3Fsecret_token%3Ds-OJWyH&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe>
+										<p>Music is a pastime for me, I make music for myself and friends.</p>
+										
+										<iframe width="100%" height="300" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/725763793%3Fsecret_token%3Ds-icuO9&color=%23fcfcfc&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe>
+										<iframe width="100%" height="300" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/623150241&color=%23fcfcfc&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe>
+										<iframe width="100%" height="300" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/529251078&color=%23fcfcfc&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe>
 									</a>
 								</div>
 							</li>
