--- a/index.html
+++ b/index.html
@@ -25,10 +25,10 @@
 					<a href="/resume/cv.pdf">Resume</a>
 					<a href="/contact">Contact Me</a>
 					/
-					<a href="/social">Social Media</a>
+					<a href="#social">Social Media</a>
 					/
-					<a href="/video">Videos</a>
-					<a href="/music">Music</a>
+					<a href="#youtube">Videos</a>
+					<a href="#music">Music</a>
 				</div>
 
 			<!-- HEADER IMAGE -->
@@ -81,7 +81,7 @@
 						  <ul>
 							<li>
 								<div>
-									<a href="#">
+									<a href="#resume">
 										<h2>RESUME</h2>
 										<embed src="resume/cv.pdf" type="application/pdf" height="100%" width="100%">
 									</a>
@@ -89,7 +89,7 @@
 							</li>
 							<li>
 								<div>
-									<a href="#">
+									<a href="#social">
 										<h2>SOCIAL MEDIA</h2>
 										<br>
 										<p>You can catch me on Social Media at these these accounts.</p>
@@ -103,7 +103,7 @@
 							</li>
 							<li>
 								<div>
-									<a href="#">
+									<a href="#youtube">
 										<h2>YOUTUBE VIDEOS</h2>
 										<p>YouTube was a side project for me during 2010-2012, where I produced mixes of music that I was listening to at the time. If you're looking for new music from me, I release on SoundCloud now.</p>
 										<p>While regular uploads have stopped, I do occasionally upload unlisted videos to share with friends or specific groups of people.</p>
@@ -112,7 +112,7 @@
 							</li>
 							<li>
 								<div>
-									<a href="#">
+									<a href="#music">
 										<h2>MUSIC</h2>
 										<p>Music is a pastime for me, I make music for myself and friends.</p>
 										
