--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
 			<!-- DESCRIPTION -->
 				<div id="description">
-					<h3>Daniel Hunter - 23, Perth, AUS.</h3>
+					<h3>Daniel Hunter - 24, Perth, AUS.</h3>
 				</div>
 
 			<!-- POST CONTENT -->
@@ -58,17 +58,19 @@
 							</div>
 								<div class="post_body" id="post_body">
 									<a>
-										I'm Daniel Hunter. Certified in Information Technology Communication & Computer Systems Technology, with a Electrical Pre-Apprenticeship.
+										I'm Daniel Hunter. 
+										I am Certified in Information Technology Communication & Computer Systems Technology, with a Electrical Pre-Apprenticeship.
+										Interests in Technology, Engineering, Finance & Music. 
 									</a>
 									<br>
 									<br>
 									<a>
-										Personal IT related interests include Web Dev, Simple Programming / Scripting, Reverse Engineering & Networking.
+										My IT interests include Web Devevelopment, Simple Programming (High-Level Lang Scripting), Reverse Engineering & Networking.
 									</a>
 									<br>
 									<br>
 									<a>
-										Currently exploring exciting new opportunities @ undisclosed employer.
+										Currently employed @ CorpCloud.
 									</a>
 								</div>
 							</div>
@@ -128,16 +130,16 @@
 										<h2>TRAVEL</h2>
 										<p>
 											I've travelled to the following parts of South East Asia.
-												• Thailand
-												• Indonesia
-												• Malaysia
-												• Singapore
+												• Thailand <br>
+												• Indonesia <br>
+												• Malaysia <br>
+												• Singapore <br>
 											
 											Looking to do the following in the next 10 or so.
-												• Japan
-												• South Korea
-												• China
-												• Cambodia
+												• Japan <br>
+												• South Korea <br>
+												• China <br>
+												• Cambodia <br>
 										</p>
 									</a>
 								</div>
