--- a/index.html
+++ b/index.html
@@ -59,18 +59,18 @@
 								<div class="post_body" id="post_body">
 									<a>
 										I'm Daniel Hunter. 
-										I am Certified in Information Technology Communication & Computer Systems Technology, with a Electrical Pre-Apprenticeship.
-										Interests in Technology, Engineering, Finance & Music. 
+										I have certifications in Information Technology Communications & Computer Systems Technology, with a Electrical Pre-Apprenticeship.
+										Personal interests in Technology, Engineering, Finance & Music. 
 									</a>
 									<br>
 									<br>
 									<a>
-										My IT interests include Web Devevelopment, Simple Programming (High-Level Lang Scripting), Reverse Engineering & Networking.
+										My professional IT interests are Web Devevelopment, Simple Programming (High-Level Lang Scripting), Reverse Engineering & Networking.
 									</a>
 									<br>
 									<br>
 									<a>
-										Currently employed @ CorpCloud.
+										Currently Systems Administration @ CorpCloud.
 									</a>
 								</div>
 							</div>
