--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
 			<link href='http://fonts.googleapis.com/css?family=Crimson+Text:600,600italic' rel='stylesheet' type='text/css'>
 			<link href="https://fonts.googleapis.com/css?family=EB+Garamond" rel="stylesheet">
 			<meta charset="UTF-8">
+			<meta property="og:image" content="images/header_img1.jpg"/>
+			<meta property="og:title" content="HUNTER: A Personal Portfolio Website" />
 	</head>
 	<body>
 		<div id="container">
