--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 									<br>
 									<br>
 									<a>
-										Currently Systems Administration @ CorpCloud.
+										Thinking Things Through @ Future Career.
 									</a>
 								</div>
 							</div>
