--- a/index.html
+++ b/index.html
@@ -108,42 +108,62 @@
 							<li>
 								<div>
 									<a href="#youtube">
-										<h2>YOUTUBE VIDEOS</h2>
-										<p>YouTube was a side project for me during 2010-2012, where I produced mixes of music that I was listening to at the time. If you're looking for new music from me, I release on SoundCloud now.</p>
-										<p>While regular uploads have stopped, I do occasionally upload unlisted videos to share with friends or specific groups of people.</p>
+										<h2>
+											YOUTUBE
+										</h2>
+										<br>
+										<p>
+											YouTube was a side project for me during 2010-2012, where I produced mixes of music that I was listening to at the time.<br>
+											If you are looking for new music from me, I tend to release bits I am working on SoundCloud now.
+										</p>
+										<br>
+										<p>
+											While regular uploads have stopped, I do occasionally upload unlisted videos to share with personal friends or communities.
+										</p>
 									</a>
 								</div>
 							</li>
 							<li>
 								<div>
 									<a href="#music">
-										<h2>MUSIC</h2>
-										<p>Music is a pastime for me, I make music for myself and friends.</p>
-										
-										<iframe width="100%" height="300" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/725763793%3Fsecret_token%3Ds-icuO9&color=%23fcfcfc&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe>
-										<iframe width="100%" height="300" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/623150241&color=%23fcfcfc&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe>
-										<iframe width="100%" height="300" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/529251078&color=%23fcfcfc&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe>
+										<h2>
+											MUSIC
+										</h2>
+										<br>
+										<p>
+											Music is a pass time / hobby for me.
+											I have been making music on / off since 2012.
+											I oft make music to share with my friends and for myself.
+										</p>
+										<br>
+											<iframe width="100%" height="300" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/623150241&color=%23fcfcfc&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe>
+											<iframe width="100%" height="300" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/529251078&color=%23fcfcfc&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe>
 									</a>
 								</div>
 							</li>
 							<li>
 								<div>
 									<a href="#">
-										<h2>TRAVEL</h2>
+										<h2>
+											TRAVEL
+										</h2>
+										<br>
 										<p>
-											I've travelled to the following parts of South East Asia.
+											I've travelled to the following parts of South East Asia.<br>
 											<br>
-												• Thailand <br>
-												• Indonesia <br>
-												• Malaysia <br>
-												• Singapore <br>
+												&emsp;• Thailand <br>
+												&emsp;• Indonesia <br>
+												&emsp;• Malaysia <br>
+												&emsp;• Singapore <br>
 											<br>
-											Looking to do the following in the next 10 or so.
+										</p>
+										<p>
+											I would like to travel to these places next.<br>
 											<br>
-												• Japan <br>
-												• South Korea <br>
-												• China <br>
-												• Cambodia <br>
+												&emsp;• Cambodia <br>
+												&emsp;• South Korea <br>
+												&emsp;• Japan <br>
+											<br>
 										</p>
 									</a>
 								</div>
@@ -152,10 +172,13 @@
 								<div>
 									<a href="#">
 										<h2>ABOUT ME</h2>
+										<br>
 										<p>
 											I'm Daniel Hunter. Certified in Information Technology Communication & Computer Systems Technology, with a Electrical Pre-Apprenticeship.
 											<br>
-											<br>
+										</p>
+										<br>
+										<p>
 											Personal IT related interests include UI/UX Web Design & Development, Programming / Reverse Engineering & Networking.
 										</p>
 									</a>
