--- a/newtab/index.html
+++ b/newtab/index.html
@@ -7,7 +7,7 @@
 	<title>Da Bois!</title>
 	<div class="yt-cover"></div>
 	<div class="yt-video">
-		<iframe src="https://www.youtube.com/embed/3qdEMXmwTkQ?&amp;autoplay=1&amp;mute=1&amp;controls=0&amp;disablekb=1&amp;rel=0" marginheight="0" marginwidth="0" scrolling="auto" allowfullscreen="" width="100%" height="100%" frameborder="0">
+		<iframe src="https://www.youtube-nocookie.com/embed/3qdEMXmwTkQ?&amp;autoplay=1&amp;mute=1&amp;controls=0&amp;disablekb=1&amp;rel=0" marginheight="0" marginwidth="0" scrolling="auto" allowfullscreen="" width="100%" height="100%" frameborder="0">
 		</iframe>
 	</div>
 </body>
