--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 
 			<!-- DESCRIPTION -->
 				<div id="description">
-					<h3>Daniel Hunter - 24, Perth, AUS.</h3>
+					<h3>Daniel Hunter - 26, Perth, AUS.</h3>
 				</div>
 
 			<!-- POST CONTENT -->
@@ -61,8 +61,8 @@
 								<div class="post_body" id="post_body">
 									<a>
 										I'm Daniel Hunter. 
-										I have certifications in Information Technology Communications & Computer Systems Technology, with a Electrical Pre-Apprenticeship.
-										Personal interests in Technology, Engineering, Finance & Music. 
+										Studied in Information Technology Communications & Computer Systems Technology & Electrical Engineering.
+										Personal interests in Engineering, Finance & Music. 
 									</a>
 									<br>
 									<br>
@@ -72,7 +72,7 @@
 									<br>
 									<br>
 									<a>
-										Thinking Things Through @ Future Career.
+										Currrently employed @ BG&E.
 									</a>
 								</div>
 							</div>
