--- a/newtab/index.html
+++ b/newtab/index.html
@@ -1,15 +1,24 @@
 <!DOCTYPE html>
 <html lang="en-US">
-<head>
-	<meta charset="utf-8">
-	<link rel="stylesheet" href="styles.css">
-</head>
-<body>
-	<title>Da Bois!</title>
-	<div class="yt-cover"></div>
-	<div class="yt-video">
-		<iframe src="https://www.youtube-nocookie.com/embed/b-PyEswUenE?&amp;autoplay=1&amp;mute=1&amp;controls=0&amp;disablekb=1&amp;rel=0" marginheight="0" marginwidth="0" scrolling="auto" allowfullscreen="" width="100%" height="100%" frameborder="0">
-		</iframe>
-	</div>
-</body>
+	<head>
+		<meta charset="utf-8">
+		<meta name="referrer" content="no-referrer">
+		<link rel="stylesheet" href="styles.css">
+		<script src="scripts\CityTempTime.js"></script>
+	</head>
+	<body>
+		<title>Da Bois!</title>
+		<div class="CityTempTime">
+			<p id="time"></p>
+			<div class="CityTemp">
+				<p id="city"></p>
+				<p id="temp"></p>
+			</div>
+		</div>
+		<div class="yt-cover"></div>
+		<div class="yt-video">
+				<iframe src="https://www.youtube-nocookie.com/embed/b-PyEswUenE?&amp;autoplay=1&mute=1&controls=0&disablekb=1&rel=0&showinfo=0" marginheight="0" marginwidth="0" scrolling="auto" allowfullscreen="" width="100%" height="100%" frameborder="0">
+				</iframe>
+		</div>
+  </body>
 </html>
