Starting more fixes
Yea

--- a/newtab/index.html
+++ b/newtab/index.html
@@ -9,8 +9,8 @@
 	<body>
 		<title>Da Bois!</title>
 		<div class="CityTempTime">
-			<p id="time"></p>
-			<div class="CityTemp">
+			<p id="clock"></p>
+			<div class="info">
 				<p id="city"></p>
 				<p id="temp"></p>
 			</div>
