Added Wind & fixed Font
As per desc

--- a/newtab/index.html
+++ b/newtab/index.html
@@ -13,6 +13,7 @@
 			<div class="info">
 				<p id="city"></p>
 				<p id="temp"></p>
+				<p id="wind"></p>
 			</div>
 		</div>
 		<div class="yt-cover"></div>
