--- a/newtab/index.html
+++ b/newtab/index.html
@@ -18,7 +18,7 @@
 		</div>
 		<div class="yt-cover"></div>
 		<div class="yt-video">
-				<iframe src="https://www.youtube-nocookie.com/embed/b-PyEswUenE?&amp;autoplay=1&mute=1&controls=0&disablekb=1&rel=0&showinfo=0" marginheight="0" marginwidth="0" scrolling="auto" allowfullscreen="" width="100%" height="100%" frameborder="0">
+				<iframe src="https://www.youtube-nocookie.com/embed/HfgIFGbdGJ0?&amp;autoplay=1&mute=1&controls=0&disablekb=1&rel=0&showinfo=0" marginheight="0" marginwidth="0" scrolling="auto" allowfullscreen="" width="100%" height="100%" frameborder="0">
 				</iframe>
 		</div>
   </body>
