--- a/newtab/index.html
+++ b/newtab/index.html
@@ -9,7 +9,12 @@
 	<body>
 		<title>Da Bois!</title>
 		<div class="CityTempTime">
-			<p id="clock"></p>
+			<div id="clock">
+				<p id="hour"></p>
+				<p id="minute"></p>
+				<p id="second"></p>
+				<p id="ampm"></p>
+			</div>
 			<div class="info">
 				<p id="city"></p>
 				<p id="temp"></p>
