--- a/newtab/index.html
+++ b/newtab/index.html
@@ -10,9 +10,9 @@
 		<title>Da Bois!</title>
 		<div class="CityTempTime">
 			<div id="clock">
-				<p id="hour"></p>
-				<p id="minute"></p>
-				<p id="second"></p>
+				<p id="hours"></p>
+				<p id="minutes"></p>
+				<p id="seconds"></p>
 				<p id="ampm"></p>
 			</div>
 			<div class="info">
