--- a/newtab/index.html
+++ b/newtab/index.html
@@ -4,7 +4,7 @@
 		<meta charset="utf-8">
 		<meta name="referrer" content="no-referrer">
 		<link rel="stylesheet" href="styles.css">
-		<script src="scripts/Weather.js"></script>
+		<script src="scripts/weather.js"></script>
 		<script src="scripts/clock.js"></script>
 	</head>
 	<body>
